# ocenovani-drevin

./: .dockerignore  .gitignore  Dockerfile  METODIKA.md  README.md  calculator.py  compensation.py  main.py
.github/workflows/: docker.yml
data/: taxons.py
ocenovani-drevin/: .gitignore  LICENSE  compensation.py  main.py  pyproject.toml
ocenovani-drevin/data/: tables.py
static/: api-client.js  app.js  app.jsx  calc.js  data.js  index.html  style.css  tree-viz.jsx  waterfall.jsx
static/old-ui/: index.html
tests/: test_calculator.py
